css/index-style.css
/* ... */
.main-box{
    display: block;
    height: 350px;
    flex-wrap: wrap;
    background-color: black;
    padding: 40px;
}

.main-box h2{
    font-family: "Lato";
    font-size: 25px;
    font-weight: 400;
    color: white;
    padding: 20px 0px 10px 0px;
}

.main-box p{
    font-family: "Lato";
    font-size: 15px;
    font-weight: 400;
    color: white;
    padding-bottom: 20px;
}

.box2{
    display: grid;
    background-color: black;
    justify-content: center;
    align-items: center;
    padding: 0px 0px 20px 0px;
}

.box2 h2{
    font-family: "Lato";
    font-size: 25px;
    font-weight: 400;
    color: white;
    padding: 10px 0px 0px 0px;
    margin: 0 auto;
}

.box2 .btn{
    margin: 0 auto;
}

.box2 i{
    color: white;
    margin: 0 auto;
    padding: 20px 0px;
}

.box3{
    display: grid;
    background-color: black;
    justify-content: center;
    align-items: center;
    padding: 0px 0px 20px 0px;
}

.box3 h2{
    font-family: "Lato";
    font-size: 25px;
    font-weight: 400;
    color: white;
    padding: 10px 0px 0px 0px;
    margin: 0 auto;
}

.box3 .btn{
    margin: 0 auto;
}

.box3 i{
    color: white;
    margin: 0 auto;
    padding: 20px 0px;
}
/* ... */

